@@ -24,7 +24,7 @@
         %td= spacer
         %td{ :valign => :top }
           .label Stage:
-          = o.select :stage, Setting.opportunity_stage.invert.sort, { :selected => @opportunity.stage.to_sym }, { :style => "width:160px" }
+          = o.select :stage, Setting.opportunity_stage, { :selected => @opportunity.stage.to_sym }, { :style => "width:160px" }
 
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
