@@ -28,7 +28,7 @@
           %td= spacer
           %td{ :valign => :top }
             .label.req.top Stage:
-            = f.select :stage, Setting.opportunity_stage.invert.sort, { :selected => @opportunity.stage.to_sym }, { :style => "width:160px" }
+            = f.select :stage, Setting.opportunity_stage, { :selected => @opportunity.stage.to_sym }, { :style => "width:160px" }
 
       %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
         %tr
@@ -69,7 +69,6 @@
       = f.submit "Create Opportunity", :onclick => "submit_form()"
       or
       = link_to "Cancel", opportunities_url
-
 
 / <h1>New opportunity</h1>
 / 
